syntax = "proto3";

package rpc;

option go_package = "chapter8/rpc";

import "rpc/request/user.proto";
import "rpc/response/user.proto";

service User {
  rpc One (request.UserOne) returns (response.UserOne) {}
  rpc Many (request.UserMany) returns (response.UserMany) {}
  rpc Login (request.UserLogin) returns (response.UserLogin) {}
  rpc SmsRegister (request.UserSmsRegister) returns (response.UserSmsRegister) {}
  rpc Register (request.UserRegister) returns (response.UserRegister) {}
  rpc Modify (request.UserModify) returns (response.UserModify) {}
  rpc Cash (request.UserCash) returns (response.UserCash) {}
}
